[tool.poetry]
name = "ph7"
version = "0.1.0"
description = "Python native HTML rendering"
authors = ["angrybayblade <vptl185@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
