[tool.poetry]
name = "ph7-bootstrap"
version = "0.1.0"
description = "Bootstrap plugin for PH7"
authors = ["angrybayblade <vptl185@gmail.com>"]
readme = "README.md"
packages = [{include = "bootstrap"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
